<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false" >Voyagr</string>
    <string name="action_show_list" translatable="false">Show List</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="trip_name" translatable="false">Trip Name</string>
    <string name="place_name" translatable="false">Place Name</string>
    <string name="place_lat" translatable="false">Place Latitute</string>
    <string name="place_lng" translatable="false">Place Longtitute</string>
    <string name="addPlace_button" translatable="false">Save Place Name</string>
    <string name="searchPlaces_button" translatable="false">search</string>
    <string name="done_addPlaces" translatable="false">Finish!</string>
    
    <string name="start_date" translatable="false">Start Date</string>
    <string name="end_date" translatable="false">End Date</string>
    <string name="trip_desc" translatable="false">Trip Description</string>
    <string name="addTrip_button" translatable="false">Finish Editing</string>
    
    <string name="delete_trip" translatable="false">Delete</string>
    <string name="show_trip" translatable="false">Show</string>
    <string name="expand_trip" translatable="false">Expand</string>
    <string name="placelist" translatable="false">In this trip, you have been to: </string>
    <string name="alert_dialog_name" translatable="false">Trip Name: </string>
    <string name="alert_dialog_desc" translatable="false">Trip Description: </string>
    <string name="trip_name_space" translatable="false">New Trip Name</string>
    <string name="trip_desc_space" translatable="false">New Trip Description</string>
    
    <color name="black">#000000</color>
    
    
    

</resources>
